<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mee4411_simulation</name>
  <version>0.0.0</version>
  <description>A package that holds the main configuration and launch files for this project</description>
  <maintainer email="pdames@temple.edu">Philip Dames</maintainer>
  <license>LGPL-3.0-only</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>

  <depend>python3-collision</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
